--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.14",
+        "jquery": "^3.7.0",
         "tailwindcss": "^3.3.3"
     }
 }
